<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.shops.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_mainTitle"
        android:name="com.example.shops.ui.mainTitle.MainTitleFragment"
        android:label="@string/title_mainTitle"
        tools:layout="@layout/fragment_maintitle" />

    <fragment
        android:id="@+id/navigation_sort"
        android:name="com.example.shops.ui.sort.SortFragment"
        android:label="@string/title_sort"
        tools:layout="@layout/fragment_sort" />
    <fragment
        android:id="@+id/navigation_shopping"
        android:name="com.example.shops.ui.goShopping.GoShoppingFragment"
        android:label="@string/title_shopping"
        tools:layout="@layout/fragment_shopping" />
    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.example.shops.ui.mine.MineFragment"
        android:label="@string/title_mine"
        tools:layout="@layout/fragment_mine" />
</navigation>